--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.buy_sell</groupId>
-    <artifactId>shop</artifactId>
+    <groupId>shop_store</groupId>
+    <artifactId>shop_store</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>shop_1</module>
+        <module>server_shop</module>
+        <module>client</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
+    </dependencies>
 
 </project>
