--- a/shop_1/pom.xml
+++ b/shop_1/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>RELEASE</version>
+            <version>2.8.11</version>
         </dependency>
         <dependency>
             <groupId>com.shop</groupId>
